Refine and use `seed` function.

--- a/giulia.tex
+++ b/giulia.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage[a3paper, landscape, margin=1cm]{geometry}
 \usepackage{multicol}
+\usepackage{color}
 
 \setlength{\columnsep}{1cm}
 
@@ -22,6 +23,11 @@
 \huge
 %\LobsterTwo
 
+\vfill
+
 \include{giulia-tabular}
 
+\vfill
+
 \end{document}
+
