--- a/giulia-tabular.tex
+++ b/giulia-tabular.tex
@@ -1,32 +1,32 @@
 \begin{tabular}{cccccccccccccccccccccccccccccccccccccccc}
 z & a & p & m & k & z & q & d & o & q & l & z & x & z & w & l & m & z & d & w & x & e & z & m & d & n & e & n & p & o & x & q & l & t & t & c & b & c & u & y \\
-c & d & l & w & k & a & l & j & f & e & f & m & j & f & c & h & s & d & o & v & r & a & w & n & z & a & a & h & y & e & k & l & o & t & f & r & w & z & z & n \\
-b & c & m & d & x & t & m & f & g & w & b & f & t & z & v & k & j & n & o & q & c & t & l & d & i & b & z & c & y & z & t & f & e & q & p & z & k & n & o & l \\
+c & d & l & w & k & a & l & j & f & e & f & m & j & f & c & h & s & d & o & 5 & L & I & N & G & U & A & G & G & I & e & k & l & o & t & f & r & w & z & z & n \\
+b & c & $\infty$ & C & H & E & F & A & L & A & N & A & N & N & A & k & j & n & o & q & c & t & l & d & i & b & z & c & y & z & t & f & e & q & p & z & k & n & o & l \\
 c & s & p & y & l & r & f & d & h & q & r & y & u & n & v & q & p & u & e & a & h & j & l & y & e & w & r & g & d & z & k & i & j & p & a & w & k & a & r & m \\
-e & h & o & x & g & d & e & x & f & c & r & s & u & a & s & u & k & l & p & u & d & g & m & o & c & u & g & u & p & y & i & v & k & p & p & i & w & t & n & u \\
-g & x & a & n & n & i & d & k & k & n & l & p & q & t & a & q & e & i & t & b & z & l & e & i & f & e & f & i & g & c & k & n & j & h & x & w & c & d & q & i \\
-r & j & c & a & z & o & m & n & d & e & l & p & m & x & v & a & n & v & q & s & q & n & z & w & t & q & o & u & x & n & m & b & i & m & m & f & w & l & n & g \\
-y & h & x & e & s & q & s & n & u & o & h & o & g & a & e & j & j & t & n & h & h & e & g & f & i & y & k & g & d & m & x & t & e & l & x & o & c & k & l & g \\
-z & q & k & k & e & h & r & l & j & d & m & j & d & p & p & w & p & b & j & w & x & o & u & z & z & s & j & y & w & d & c & t & b & q & v & y & u & v & g & q \\
-b & l & g & x & n & o & x & g & j & y & w & i & b & i & f & i & f & e & q & x & d & d & a & j & f & q & w & j & r & m & n & l & d & k & v & x & g & p & k & o \\
-v & a & c & c & k & q & n & v & t & m & v & m & r & a & h & j & f & d & p & h & j & y & p & u & x & x & m & m & l & l & z & s & l & c & m & q & k & s & b & g \\
-d & o & w & o & w & n & n & t & k & y & t & b & m & b & d & d & n & i & w & t & y & b & w & n & r & n & s & g & d & j & y & l & h & a & g & m & b & p & u & m \\
-e & u & g & d & c & m & c & g & e & o & l & u & y & n & i & b & m & f & o & p & m & p & f & o & o & k & b & s & z & d & s & w & h & d & k & x & j & z & g & e \\
-w & m & j & y & g & i & l & u & h & x & h & a & n & q & h & z & l & r & b & c & t & q & d & p & y & n & b & p & q & v & j & y & b & x & t & w & x & o & n & c \\
-f & t & x & w & n & q & l & f & o & l & a & t & t & r & i & q & i & o & a & z & r & y & c & d & v & y & l & w & n & x & z & v & w & l & i & l & d & k & u & x \\
-v & o & z & r & n & t & p & c & p & p & r & s & z & k & i & l & t & e & l & z & z & p & m & g & m & k & j & o & k & p & r & i & z & l & x & l & q & d & x & y \\
-j & w & v & k & j & r & v & r & m & k & d & r & d & x & z & c & n & c & h & g & r & p & a & l & h & m & h & i & o & n & o & o & v & p & o & w & v & r & e & l \\
-q & m & r & y & h & j & c & l & o & u & t & g & n & t & k & o & j & l & r & w & f & f & l & x & b & w & r & q & z & z & i & s & q & l & y & h & w & a & m & w \\
-v & o & m & r & x & l & a & e & g & f & w & f & a & b & l & n & y & c & b & t & v & w & n & a & k & u & p & f & j & f & h & v & x & c & n & z & u & m & t & r \\
-r & l & z & n & o & p & l & l & g & j & q & n & v & s & a & l & g & k & m & n & w & i & t & i & b & w & h & a & o & g & a & j & v & f & u & t & u & g & x & m \\
-g & v & x & f & t & o & g & l & s & x & v & i & t & x & c & i & h & n & b & a & f & g & c & r & n & e & u & h & i & a & z & a & u & q & x & j & x & m & d & r \\
-z & a & g & u & d & z & m & o & r & m & g & z & l & m & h & h & p & w & z & c & h & s & d & h & g & k & b & z & n & e & t & r & a & m & i & x & v & g & a & j \\
-t & l & c & b & b & b & q & g & d & u & k & k & m & t & x & u & e & v & o & j & l & h & s & t & c & l & e & c & q & i & n & f & k & k & z & p & v & m & q & j \\
-g & v & n & c & k & m & v & s & u & r & f & z & l & r & c & f & z & w & j & c & h & d & p & q & n & q & o & c & t & g & x & j & m & n & u & v & f & p & n & k \\
-k & w & s & l & d & g & x & c & e & z & e & k & d & o & h & v & t & z & e & b & i & i & q & x & r & b & h & i & n & h & y & j & q & w & b & c & d & l & p & k \\
-b & t & h & d & c & t & l & m & l & j & x & x & e & j & b & d & p & i & a & g & u & v & h & u & d & k & n & x & h & a & q & d & f & m & o & z & u & o & l & t \\
-v & d & t & s & c & c & b & i & u & j & s & y & b & s & c & d & s & g & o & t & k & k & v & f & h & w & v & p & g & p & x & q & r & z & e & o & n & z & k & a \\
-w & y & g & o & a & x & h & e & o & c & z & x & n & c & t & s & w & i & q & y & l & f & o & o & l & s & t & e & j & s & p & g & s & y & u & r & n & i & h & y \\
+e & h & o & x & g & d & e & x & f & c & r & s & u & a & s & u & k & l & p & u & d & g & m & o & c & u & g & u & T & y & i & v & k & p & G & i & w & t & n & u \\
+g & x & a & n & n & i & d & k & k & I & G & L & O & U & a & q & e & i & t & b & z & l & e & i & f & e & f & i & U & c & k & n & j & h & I & w & c & d & q & i \\
+r & j & c & A & z & o & m & n & d & e & l & p & m & x & v & a & n & v & q & s & q & n & z & w & t & q & o & u & T & n & T & b & i & m & R & f & w & l & n & g \\
+y & h & x & B & s & q & s & n & u & o & h & o & g & a & e & j & j & t & A & D & A & M & g & f & i & y & k & g & T & m & U & t & e & L & A & P & I & S & l & g \\
+z & q & k & B & e & h & r & l & j & d & m & j & d & p & p & w & p & b & j & A & S & S & I & S & I & s & j & S & O & L & O & t & b & q & S & y & u & v & g & q \\
+b & l & g & R & n & o & x & S & A & N & P & I & E & T & R & O & f & e & q & x & d & d & a & j & f & q & w & j & u & m & n & l & d & k & O & x & g & p & k & o \\
+v & a & c & A & k & q & n & v & t & m & v & m & r & a & h & j & f & d & p & h & j & y & p & u & x & x & m & m & e & l & z & s & l & c & L & q & k & s & b & g \\
+d & o & w & C & w & n & n & t & k & y & t & b & m & b & d & d & n & i & w & t & y & b & w & n & r & n & s & g & l & j & y & l & h & a & E & m & b & p & u & m \\
+e & u & g & C & c & m & c & g & e & o & l & u & y & n & i & b & m & f & o & p & m & p & f & o & M & k & b & s & w & d & s & w & h & d & k & x & j & z & g & e \\
+w & m & j & I & g & i & l & u & h & x & h & M & \& & G & h & z & l & r & b & c & G & U & S & C & I & O & b & p & p & v & j & y & b & x & t & w & x & N & n & c \\
+f & t & x & A & n & q & l & f & o & l & a & t & t & r & i & q & i & o & a & z & r & y & c & d & O & y & l & w & x & x & z & v & w & l & i & l & d & O & u & x \\
+v & o & z & L & n & t & p & c & p & M & r & s & z & k & i & l & t & e & l & z & z & p & m & g & D & k & j & o & y & p & r & i & z & l & x & l & q & V & x & y \\
+j & w & v & A & j & r & G & R & E & A & T & E & S & T & z & c & n & c & h & g & r & p & a & l & I & T & A & R & T & A & R & U & G & A & p & o & w & E & r & e \\
+q & m & r & V & h & j & c & l & o & N & t & g & H & t & k & o & j & l & r & w & f & $\heartsuit$ & l & x & b & w & r & q & z & z & i & s & q & l & y & h & w & N & m & w \\
+v & 2 & 0 & 1 & 7 & l & a & e & g & f & w & f & O & b & l & 0 & y & c & b & t & v & w & n & a & k & u & p & f & j & f & h & v & x & c & n & z & u & A & t & r \\
+r & l & z & T & o & p & l & l & g & j & q & n & W & s & a & 1 & g & k & m & n & w & i & t & i & b & w & h & a & o & g & a & j & v & f & u & t & u & N & x & m \\
+g & v & x & A & t & o & g & l & s & x & v & i & t & x & c & 0 & h & n & b & a & f & a & c & r & n & e & T & h & S & a & z & a & u & q & x & j & x & O & d & r \\
+z & a & g & e & d & z & m & o & r & m & g & z & 1 & 5 & 0 & 9 & 1 & 7 & y & i & h & C & d & h & g & T & I & P & E & N & S & O & a & m & i & x & v & D & a & j \\
+t & l & c & u & b & b & q & g & d & u & k & k & m & t & x & 1 & e & v & o & j & l & O & s & t & c & l & V & c & M & i & n & f & k & k & z & p & v & I & q & j \\
+g & v & n & c & k & m & v & s & 2 & r & f & z & l & r & c & 7 & z & w & j & c & h & 2 & p & q & n & q & O & c & P & g & x & j & m & n & u & C & f & p & n & k \\
+k & w & s & l & d & g & x & c & 5 & z & e & k & d & o & h & e & t & z & e & b & i & i & q & x & r & b & G & i & R & h & y & j & q & w & b & U & d & l & p & k \\
+b & t & h & d & c & t & l & m & 5 & j & x & x & e & j & b & q & p & i & a & g & u & v & h & u & d & k & L & S & E & I & N & E & L & M & I & O & u & o & l & t \\
+v & d & t & s & c & 2 & 5 & 5 & 8 & 2 & s & y & b & B & R & U & X & E & L & L & E & S & v & f & h & w & I & p & g & p & x & q & r & z & e & R & n & z & k & a \\
+w & y & g & o & a & x & h & e & 1 & c & z & x & n & c & t & s & w & i & q & y & l & f & o & o & l & C & O & N & M & E & p & g & s & y & u & E & n & i & h & y \\
 n & b & t & r & m & p & s & o & o & f & o & a & c & s & y & j & v & x & e & x & g & d & p & e & s & o & l & j & o & m & d & i & f & f & h & t & o & w & i & a \\
 s & s & m & k & w & y & u & m & v & e & q & u & c & f & w & n & d & e & j & d & k & n & z & y & u & m & g & y & k & e & v & q & z & m & n & d & n & o & o & w \\
 n & t & c & n & y & a & p & t & k & v & u & a & c & d & e & x & y & e & a & q & x & h & q & i & l & k & a & c & m & j & d & a & i & s & m & m & j & m & w & g \\
